# qdesigner

./: .gitignore  ChangeLog  Dockerfile  requirements.txt  setup.cfg  tox.ini
qdesigner/: __init__.py  cards.py  config.py  qdesigner.py
qdesigner/static/: index.html
tests/: __init__.py
