[metadata]
name = qdesigner
summary = qdesigner
description-file =
    README.md
author = Erik Jagyugya
author-email = jagyugyaerik@gmail.com
home-page = https://github.com/jagyugyaerik/qdesigner
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers :: Scientists
    Natural Language :: English
    Programming Language :: Python :: 3.7
keywords = qdesigner

[files]
packages =
  qdesigner

[options]
zip_save = False

[pbr]
warnerrors = True

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[tool:pytest]
collect_ignore = ['setup.py']
